@@ -30,6 +30,8 @@
         - Fold all top-level navigation items.
         - Add plugin service to redirect to a certain location.
         - Add support for pagination information to retrieve by plugins.
+        - HintMenu is now based on containerMenu instead of regular
+          menu (lerepp)
 
 0.42 2021-06-18
         - Added GitHub based CI for perl.
